Fixed broken style for long deliverable titles on right side.

--- a/app/react/components/sizung/components/Deliverable/index.css
+++ b/app/react/components/sizung/components/Deliverable/index.css
@@ -10,7 +10,8 @@
 
 .row {
   composes: row from global;
-  height: 30px;
+  min-height: 2em;
+  margin-bottom: 1em;
 }
 
 .content-container {
